# steam-analysis

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
airflow/config/: airflow.cfg
airflow_steam/: Dockerfile.airflow  requirements.txt
airflow_steam/dags/: db_backups.py  mongo_to_postgres.py  steam_to_mongo.py
airflow_steam/plugins/utils/: utils_dags.py
data_pipeline/: Dockerfile  bronze_pipeline.py  main.py  pipeline_bronze.py  pipeline_staging.py  pipeline_stg_details.py  pipeline_stg_reviews.py  pipeline_stg_tags.py
data_pipeline/managers/: mongo_manager.py  postgres_manager.py  steam_api_manager.py
data_pipeline/pipeline/: extract.py  load.py  transform.py
data_pipeline/utils/: mongo_manager.py  utils_logging.py  utils_pipeline.py
database/dbeaver/Scripts/: bronze_schema.sql  cutom_dtypes.sql
database/dbeaver/Scripts/schemas/: app_details.sql  app_reviews.sql  app_tags.sql
dbt_pg/: README.md  dbt_project.yml
dbt_pg/macros/: generate_schema_name.sql
dbt_pg/models/bronze/: bronze_models.yml  bronze_sources.yml  details.sql  v_app_details.sql  v_app_reviews.sql  v_app_tags.sql
dbt_pg/models/silver/: app_categories_bridge.sql  app_genres_bridge.sql  apps.sql  apps_categories_bridge.sql  apps_developers_bridge.sql  apps_genres_bridge.sql  categories.sql  developers.sql  genres.sql  movies.sql  screenshots.sql  silver_models.yml
dbt_pg/models/vector_store/: documents.sql  documets.sql
docker/postgres_pgvector/: Dockerfile
notebooks/: EDA.ipynb  data_ingestion.ipynb  langgraph.ipynb  polars_pipeline.ipynb  polars_pipeline_details.ipynb  vector_store.ipynb
src/: postgres_manager.py  steam_api_manager.py
steam-airflow/: Dockerfile.airflow  docker-compose.yaml
streamlit/: Dockerfile  Dockerfile.streamlit  Home.py
streamlit/langgraph-agent/: graph.py  models.py  nodes.py  prompt_templates.py  state.py  tools.py
streamlit/pages/: 2_Chatbot.py  3_Database.py
streamlit/utils/: db_utils.py  st_utils.py
